lib/gs-plugin-job.h
@@ -45,8 +45,6 @@ void		 gs_plugin_job_set_propagate_error	(GsPluginJob	*self,
 							 gboolean	 propagate_error);
 void		 gs_plugin_job_set_max_results		(GsPluginJob	*self,
 							 guint		 max_results);
-void		 gs_plugin_job_set_timeout		(GsPluginJob	*self,
-							 guint		 timeout);
 void		 gs_plugin_job_set_sort_func		(GsPluginJob	*self,
 							 GsAppListSortFunc sort_func,
 							 gpointer	 user_data);
